fix(form) adjust promotion 3 column field layout bug

--- a/views/assets/stylesheets/scss/app/_forms.scss
+++ b/views/assets/stylesheets/scss/app/_forms.scss
@@ -325,3 +325,21 @@
   padding-right: 20px;
   box-sizing: border-box;
 }
+
+.qor-form-coupons{
+  .qor-field:first-child{
+    width: 50%;
+    .mdl-textfield{
+      width: 100% !important;
+    }
+  }
+  .qor-field:last-child{
+    margin-top: 36px;
+  }
+  .qor-field:nth-child(2){
+    width: 60px;
+    .mdl-textfield__label{
+      overflow: inherit;
+    }
+  }
+}
